# guild-simulator

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  clippy.toml  index.html  logo.icns  release.yaml
.cargo/: config_fast_builds.toml
.github/workflows/: ci.yaml  release.yaml
assets/locales/: en.json  en.yml  fr.json  fr.yml
assets/locales/en/: en.ron
scripts/: build-windows.sh  build_all.sh  build_mac.sh  build_macos_aarch64.sh  build_macos_universal.sh  build_web.sh  build_windows.sh  buildd.sh
src/: custom_components.rs  enums.rs  locales.rs  main.rs  my_assets.rs  structs.rs  styles.rs  traits.rs  utils.rs
src/audio/: audio_source.rs  mod.rs  play_sound.rs
src/content/: constants.rs  missions.rs  mod.rs  recruits.rs
src/content/daily_events/: discussions.rs  spontaneous_applications.rs
src/content/equipments/: armors.rs  scrolls.rs  weapons.rs
src/data/: mod.rs
src/data/equipments/: armors.ron  armors.rs  scrolls.ron  scrolls.rs  weapons.ron  weapons.rs
src/structs/: daily_events.rs  equipments.rs  general_structs.rs  maps.rs  missions.rs  mod.rs  player_stats.rs  recruits.rs  trigger_structs.rs
src/structs/daily_events_folder/: daily_events.rs  discussions.rs  mod.rs  spontaneous_applications.rs
src/systems/: constants.rs  mod.rs  systems_constants.rs
src/systems/camera/: camera_setup.rs  mod.rs
src/systems/experimental/: close_on_esc.rs  mod.rs
src/systems/inputs/: escape.rs  mod.rs  mouse_click_system.rs  mouse_systems.rs
src/systems/recruits/: delete_recruit.rs  hire_new_recruits.rs  hiring_setup.rs  mod.rs  recruit_setup.rs  spawn_new_recruit.rs
src/systems/updates/: close_tuto_message.rs  delete_notifications_on_click.rs  init_rooms.rs  input.rs  mod.rs  scroll.rs  skip_tuto.rs  sleep_button_system.rs  switch_room.rs  update_buttons.rs  update_gold_counter.rs  update_recruit_infos.rs  update_recruits.rs  update_room.rs  update_room_arrows.rs  update_room_children.rs  update_room_interface_text.rs  update_room_on_click.rs  update_selected_recruit.rs
src/systems/updates/barrack/: mod.rs  select_item_in_inventory.rs  select_recruit_button.rs  select_recruit_for_equipment_button.rs  update_selected_recruit.rs
src/systems/updates/command_room/: assign_recruit_to_mission.rs  close_mission_modal.rs  mod.rs  select_map.rs  select_mission_button.rs  select_recruit_for_mission_button.rs  start_mission_button.rs  update_mission_icons.rs  update_selected_recruit.rs  update_selected_recruit_for_equipment.rs
src/systems/updates/hud/: delete_notifications_on_click.rs  mod.rs  open_tuto_message.rs  sleep_button_system.rs  update_day_counter.rs  update_gold_counter.rs  update_guild_level.rs  update_recruit_counter.rs  update_reputation_counter.rs  update_sleep_button_texture.rs  update_toxicity_counter.rs
src/systems/updates/interfaces/: delete_notifications_on_click.rs  sleep_button_system.rs  update_gold_counter.rs  update_room_interface_text.rs
src/systems/updates/office/: mod.rs  select_discussion_answer.rs  sign_mission_report.rs  toggle_daily_event_documents.rs  toggle_mission_reports.rs  update_daily_event_documents.rs  update_mission_report.rs  update_mission_report_documents.rs
src/ui/: gold_counter.rs  menu_button.rs  mod.rs  room_interface_text.rs  ui_constants.rs  ui_room_text.rs  ui_setup.rs
src/ui/buttons/: buttons_updates.rs  gold_button.rs  mod.rs  room_arrows.rs  room_left_arrow_button.rs  room_right_arrow_button.rs
src/ui/hud/: gold_counter.rs  hud.rs  left_hud.rs  mod.rs  right_hud.rs  room_interface_text.rs
src/ui/hud_folder/: hud.rs  left_hud.rs  mayor_notification_toast.rs  mod.rs  right_hud.rs  sleep_button.rs
src/ui/hud_folder/notifications/: spawn_or_update_notification.rs
src/ui/interface/: gold_counter.rs  mod.rs  room_interface_text.rs
src/ui/interface/notifications/: spawn_or_update_notification.rs
src/ui/interface/toasts/: notification_toast.rs
src/ui/modals/: left_container.rs  middle_container.rs  mission_details_modal.rs  mission_report_modal.rs  mission_report_modal_from_main.rs  mod.rs  right_container.rs
src/ui/modals/daily_events/: daily_events_modal.rs  discussion_event_doc.rs  discussion_event_document.rs  mod.rs  spontaneous_application_event_doc.rs
src/ui/modals/mission_order_modal_folder/: loots_and_start.rs  mission_order_modal.rs  mission_recap.rs  mod.rs  recruit_recap.rs
src/ui/modals/mission_report_modal/: mission_ennemy_picture.rs  mission_ennemy_stats.rs  mission_report_modal.rs  recruit_sent_picture.rs  recruit_sent_stats.rs
src/ui/modals/mission_report_modal_folder/: loots_earned.rs  mission_ennemy_picture.rs  mission_ennemy_stats.rs  mission_report_modal.rs  mod.rs  recruit_sent_picture.rs  recruit_sent_stats.rs
src/ui/modals/tuto_done_modal_folder/: mod.rs  tuto_done_modal.rs
src/ui/modals/tuto_messages/: mod.rs  tuto_message_modal.rs
src/ui/room/: mod.rs  room_nodes.rs
src/ui/rooms/: mod.rs  room_barrack.rs  room_command_room.rs  room_office.rs  room_setup.rs  room_store.rs
src/ui/rooms/barrack/: mod.rs  (+5 more)
src/ui/styles/: buttons_styles.rs  containers_styles.rs  mod.rs  node_container_style.rs
web/: index.html  style.css
(+61 files in other folders)
