[package]
name = "guild_simulator"
version = "0.0.3"
edition = "2021"
authors = ["Guillaume Jolibois <jolibois.contact@gmail.com>"]
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
bevy = { version = "0.15.0-rc.2" }
bevy-inspector-egui  = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", tag = "v0.25.0" }
bevy_asset_loader = { version = "0.21.0", features = ["2d"]}
bevy-settings = "0.6.0"
rand_core = "0.6.4"
uuid = "1.10.0"
rand = "0.8.4"
# ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
pyri_tooltip = "0.1.1"
bevy_ui_mod_alerts = "0.2.0"
colored = "2.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ![feature(diagnostic_namespace)]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[target.x86_64h-apple-darwin]
# Add any specific settings you want here

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"

[build-dependencies]
embed-resource = "1"
