[package]
name = "guild_simulator"
version = "0.0.4"
edition = "2021"
authors = ["Guillaume Jolibois <jolibois.contact@gmail.com>"]
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
bevy = { version = "0.15.0-rc.3" }
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# bevy-inspector-egui  = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", tag = "v0.25.0" }
# bevy_asset_loader = { version = "0.15.0-rc.3", features = ["2d"]}
uuid = "1.10.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
pyri_tooltip = { git = "https://github.com/benfrankel/pyri_tooltip", branch = "main"}
colored = "2.0"
# keep the following in sync with Bevy's dependencies
unic-langid = "0.9.5"
accesskit = "0.17.0"
rust-i18n = "3.1.2"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[target.x86_64h-apple-darwin]

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"

[build-dependencies]
embed-resource = "1"
