[package]
name = "guild_simulator"
version = "0.0.4"
edition = "2021"
authors = ["Guillaume Jolibois <jolibois.contact@gmail.com>"]
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
bevy = "0.15"
# bevy = { version = "0.15.0", default-features = false, features = [
#     "bevy_asset",
#     "bevy_audio",
#     "bevy_color",
#     "bevy_render",
#     "bevy_text",
#     "bevy_ui",
#     "bevy_window",
#     "bevy_winit",
#     "custom_cursor",
#     "bevy_state",
# ] }
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy-inspector-egui = "0.28.0"
# bevy_asset_loader = { version = "0.15.0-rc.3", features = ["2d"]}
uuid = "1.10.0"
rand = "0.8.4"
serde = { version = "1.0.215", features = ["derive"] }
pyri_tooltip = "0.2.0"
colored = "2.0"
rust-i18n = "3.1.2"
vleue_kinetoscope = "0.3.1"
bevy_light_2d = "0.5.0"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"

[profile.dist]
inherits = "release"
opt-level = 0
lto = true
codegen-units = 1
strip = true

# [profile.dev]
# opt-level = 0
# debug = true
# debug-assertions = true
# overflow-checks = true
# lto = "off"
# codegen-units = 16
# incremental = true
# panic = "unwind"
# strip = false

[build-dependencies]
embed-resource = "3.0.1"

[target.x86_64h-apple-darwin]

# [profile.dev.package."*"]
# opt-level = 0

[profile.release-native]
inherits = "release"
opt-level = 0
strip = "none"
